@startuml LordOfRings

class LordOfRings{
    +Heroes
    +Bestias
    +void initGame()
    +void play()
    +showResults()
    +Personaje crearPersonaje()
}
LordOfRings *-- Personaje
LordOfRings *-left- Board

abstract Personaje{
    -String id 
    -String name
    -Integer vidas
    -Integer ataque
    -Integer defensa
    + String getString()
    +{abstract}void modificarDefensa()
}

<<<<<<< HEAD
class Orcos{

}
=======
class Orcos{}
>>>>>>> f9c9da9b05b890b7afc8eda08b64074513643359
class Trasgos{}

Orcos -up-|> Bestias
Trasgos -up-|> Bestias

Humanos -up-|> Heroes
Hobbits -up-|> Heroes
Elfos -up-|> Heroes

LordOfRings *-right- Turn
Personaje *-down- Batallones
Bestias --|> Personaje
Heroes --|> Personaje

class Board{
    +Heroes
    +Bestias
    +showBoard()
    +getWinner()
    +getLoser()
    +void execute()
    -executeTurn()
}

class Turn{
    +Heroes
    +Bestias
    +Board
    +Movimiento
    +void execute()
    +void executeTurn()
    +getWinner()
}

class Batallones{
    +Heroes
    +Bestias
    +getBatallonesEnCola()
    +getBatallonesEnProceso()
}
